--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="wrap aligncenter text-shadow">
             <h2 class="text-landing"><br><strong>Arthur Schmitt</strong></h2>
             <p class="text-intro">AKA <a href="http://twitter.com/tart2000" target="_blank">@tart2000</a></p>
-            <p class="text-subtitle">Making makers make</p>
+            <p class="text-subtitle"><strong>Making makers make</strong></p>
           </div>
           <!-- .end .wrap -->
         </section>
@@ -252,7 +252,7 @@
                 <strong>See you around.</strong>
                 
               </h2>
-              <p></p> 
+              <p>Please don't hesitate to <a href="mailto:hi@arthurschmitt.com">contact me</a> if you think we could work together.</p> 
               <p>Best,<br> Arthur</p>
 
               <h5 class="fa-icons">
