added a few elements
- Montreal
- enagement

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap size-80">
-            <h1>Hi, I am an engineer and industrial designer. I make tools to help others be more creative and find collaborative solutions to wicked problems. I like to tinker and experiment, but also contribute to strategy. I give talks and workshops. I live in the South of France.</h1>
+            <h1>Hi, I am an engineer and industrial designer. I make tools to help others be more creative and find collaborative solutions to wicked problems, through engagement and empowerment. I like to tinker and experiment, but can also contribute to strategy. I give talks and workshops. I live in the South of France.</h1>
           </div>
           <!-- .end .wrap -->
         </section>
@@ -212,7 +212,7 @@
               <li>
                 <a href="http://technoculture.club" target="_blank">
                   <div>
-                    I co-founded <b>Technoculture Club</b> in 2014. An association dedicated to helping cultural organizations experiment with technology and their communities.
+                    I co-founded <b>Technoculture Club</b> in 2014. An association based in Montreal, Quebec dedicated to helping cultural organizations experiment with technology and their communities.
                   </div>
                 </a>
               </li>
@@ -236,7 +236,7 @@
               <li>
                 <a href="http://thingiverse.com/tart2000" target="_blank">
                   <div>
-                    My models and their derivatives have been downloaded 30000+ times. 
+                    I have been involved in the <b>maker movement</b> as a contributor for the last 10 years. My models and their derivatives have been downloaded 30000+ times. 
                   </div>
                 </a>
               </li>
