--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap size-80">
-            <h1>Hi, I am an engineer and industrial designer. I make tools to help others be more creative and find collaborative solutions to wicked problems, through engagement and empowerment. I like to tinker and experiment, but can also contribute to strategy. I give talks and workshops. I live in the South of France.</h1>
+            <h1>Hi, I am a designer specialized in collaborative prototyping. I make tools to help others be more creative and find solutions to wicked problems, through engagement and empowerment. I like to tinker and experiment, but can also contribute to strategy. I give talks and workshops. I live in the South of France.</h1>
           </div>
           <!-- .end .wrap -->
         </section>
@@ -98,6 +98,55 @@
           <div class="wrap">
             <h3></h3>
             <ul class="flexblock gallery">
+              
+              <li>
+                <a href="" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projects/webapp.jpg">
+                    <div class="overlay aligncenter">
+                      <h2>UNLOCK</h2>
+                      <p>A more satisfying version of QR codes</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
+                <a href="" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projects/vyvomaton.jpg">
+                    <div class="overlay aligncenter">
+                      <h2>VYVomaton</h2>
+                      <p>The engagement photobooth for VYV festival</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
+                <a href="" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projects/treasure_hunt.jpg">
+                    <div class="overlay aligncenter">
+                      <h2>TREASURE HUNT</h2>
+                      <p>An online experience to discover thecamp</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
+                <a href="" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projects/cabinet.jpg">
+                    <div class="overlay aligncenter">
+                      <h2>FoW</h2>
+                      <p>A Cabinet of Curiosities about the Future of Work</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
               <li>
                 <a href="http://makerwear.threadless.com" target="_blank">
                   <figure>
