Updated content after thecamp

--- a/index.html
+++ b/index.html
@@ -245,9 +245,16 @@
             <h3></h3>
             <ul class="flexblock activity">
               <li>
+                <a href="http://makerslab.em-lyon.com/" target="_blank">
+                  <div>
+                    I'm a tutor at <b>EMLyon Makerslab</b> and <b>Kedge Design School</b>.
+                  </div>
+                </a>
+              </li>
+              <li>
                 <a href="http://thecamp.fr" target="_blank">
                   <div>
-                    I'm in charge of the creative and collaborative toolbox at <b>thecamp</b>.
+                    I spent 2 years developing the creative and collaborative toolbox at <b>thecamp</b>.
                   </div>
                 </a>
               </li>
@@ -285,7 +292,7 @@
               <li>
                 <a href="http://thingiverse.com/tart2000" target="_blank">
                   <div>
-                    I have been involved in the <b>maker movement</b> as a contributor for the last 10 years. My models and their derivatives have been downloaded 30000+ times. 
+                    I have been involved in the <b>maker movement</b> as a contributor for the last 10 years. My 3D models and their derivatives have been downloaded 30000+ times. 
                   </div>
                 </a>
               </li>
@@ -298,7 +305,7 @@
           <div class="wrap">
             <div class="content-right text-serif">
               <h2>
-                <strong>See you around.</strong>
+                <strong>I work as a freelance designer.</strong>
                 
               </h2>
               <p>Please don't hesitate to <a href="mailto:hi@arthurschmitt.com">contact me</a> if you think we could work together.</p> 
