Added link to Medium article

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <ul class="flexblock gallery">
               
               <li>
-                <a href="" target="_blank">
+                <a href="https://medium.com/@tart2000/project-unlock-an-alternative-to-qr-codes-793aadc8293f" target="_blank">
                   <figure>
                     <img alt="Thumbnail " src="./static/images/projects/webapp.jpg">
                     <div class="overlay aligncenter">
