updated with book of 2000s

--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
             <ul class="flexblock gallery">
               
               <li>
+                <a href="https://www.kickstarter.com/projects/tart2000/the-book-of-2000s" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projectsthe_book_of_2000s.jpg">
+                    <div class="overlay aligncenter">
+                      <h2>The Book of 2000s</h2>
+                      <p>A collaborative photo book about the last 2000s</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
                 <a href="https://medium.com/@tart2000/project-unlock-an-alternative-to-qr-codes-793aadc8293f" target="_blank">
                   <figure>
                     <img alt="Thumbnail " src="./static/images/projects/webapp.jpg">
@@ -224,6 +236,7 @@
                   </figure>
                 </a>
               </li>
+              <!--
               <li>
                 <a href="http://fing.org/ReFaire-nouvelles-pratiques" target="_blank">
                   <figure>
@@ -235,6 +248,7 @@
                   </figure>
                 </a>
               </li>
+              -->
             </ul>
           </div>
           <!-- .end .wrap -->
