updated with dpts

--- a/index.html
+++ b/index.html
@@ -100,9 +100,21 @@
             <ul class="flexblock gallery">
               
               <li>
+                <a href="http://tart2000.github.io/dpts" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projects/1acteur1dpt.png">
+                    <div class="overlay aligncenter">
+                      <h2>#1acteur1département</h2>
+                      <p>A collective joke with puns on French Geography</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
                 <a href="https://www.kickstarter.com/projects/tart2000/the-book-of-2000s" target="_blank">
                   <figure>
-                    <img alt="Thumbnail " src="./static/images/projectsthe_book_of_2000s.jpg">
+                    <img alt="Thumbnail " src="./static/images/projects/book_of_2000s.jpg">
                     <div class="overlay aligncenter">
                       <h2>The Book of 2000s</h2>
                       <p>A collaborative photo book about the last 2000s</p>
@@ -188,17 +200,6 @@
                     <div class="overlay aligncenter">
                       <h2>Maker cart</h2>
                       <p>Ideal for mobile hands-on workshops</p>
-                    </div>
-                  </figure>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <figure>
-                    <img alt="Thumbnail" src="./static/images/projects/phone.jpg">
-                    <div class="overlay aligncenter">
-                      <h2>Phone from the future</h2>
-                      <p>Conversations from parallel universes</p>
                     </div>
                   </figure>
                 </a>
@@ -319,10 +320,10 @@
           <div class="wrap">
             <div class="content-right text-serif">
               <h2>
-                <strong>I work as a freelance designer.</strong>
+                <strong>I started my design studio, dedicated to collaborative prototyping: <a href="http://pocstudio.fr" target="_blank">POC studio</a></strong>
                 
               </h2>
-              <p>Please don't hesitate to <a href="mailto:hi@arthurschmitt.com">contact me</a> if you think we could work together.</p> 
+              <p>Please don't hesitate to <a href="mailto:arthur@apocstudio.fr">contact me</a> if you think we could work together.</p> 
               <p>Best,<br> Arthur</p>
 
               <h5 class="fa-icons">
