updated with POC

--- a/index.html
+++ b/index.html
@@ -260,9 +260,16 @@
             <h3></h3>
             <ul class="flexblock activity">
               <li>
+                <a href="http://pocstudio.fr" target="_blank">
+                  <div>
+                    I started my own collaborative prototyping studio : <b>POC studio</b>.
+                  </div>
+                </a>
+              </li>
+              <li>
                 <a href="http://makerslab.em-lyon.com/" target="_blank">
                   <div>
-                    I'm a tutor at <b>EMLyon Makerslab</b> and <b>Kedge Design School</b>.
+                    I'm a tutor at <b>EMLyon Makerslab</b>.
                   </div>
                 </a>
               </li>
