--- a/index.html
+++ b/index.html
@@ -98,7 +98,19 @@
           <div class="wrap">
             <h3></h3>
             <ul class="flexblock gallery">
-              
+
+              <li>
+                <a href="https://ebdorado.fr" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projects/ebdorado.png">
+                    <div class="overlay aligncenter">
+                      <h2>Ebdorado</h2>
+                      <p>A gamified platform with weekly pun challenges</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
               <li>
                 <a href="http://tart2000.github.io/dpts" target="_blank">
                   <figure>
@@ -226,6 +238,7 @@
                   </figure>
                 </a>
               </li>
+              <!--
               <li>
                 <a href="http://cubecraft.technoculture.club/" target="_blank">
                   <figure>
@@ -237,7 +250,6 @@
                   </figure>
                 </a>
               </li>
-              <!--
               <li>
                 <a href="http://fing.org/ReFaire-nouvelles-pratiques" target="_blank">
                   <figure>
@@ -259,6 +271,13 @@
           <div class="wrap size-80">
             <h3></h3>
             <ul class="flexblock activity">
+              <li>
+                <a href="http://modulo.tools" target="_blank">
+                  <div>
+                    I founded <b>Modulo</b>, a SAAS tool to help facilitators in their work.
+                  </div>
+                </a>
+              </li>
               <li>
                 <a href="http://pocstudio.fr" target="_blank">
                   <div>
