--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap size-80">
-            <h1>Hi, I am a designer specialized in collaborative prototyping. I make tools to help others be more creative and find solutions to wicked problems, through engagement and empowerment. I like to tinker and experiment, but can also contribute to strategy. I give talks and workshops. I live in the South of France.</h1>
+            <h1>Hi, I am a designer specialized in collaborative prototyping. I make tools to help others be more creative and find solutions to wicked problems, through engagement and empowerment. I like to tinker and experiment, but can also contribute to strategy. I give talks and workshops. I live in Lyon.</h1>
           </div>
           <!-- .end .wrap -->
         </section>
