new projects update

--- a/index.html
+++ b/index.html
@@ -100,6 +100,30 @@
             <ul class="flexblock gallery">
 
               <li>
+                <a href="https://portfolio.arthurschmitt.com/maison-du-calembour" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projects/portfolio.png">
+                    <div class="overlay aligncenter">
+                      <h2>Maison du calembour</h2>
+                      <p>Illustrations with puns in them</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
+                <a href="https://bikefurious.bigcartel.com" target="_blank">
+                  <figure>
+                    <img alt="Thumbnail " src="./static/images/projects/bikefurious.png">
+                    <div class="overlay aligncenter">
+                      <h2>Bikefurious</h2>
+                      <p>Tshirts about bicyles</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <li>
                 <a href="https://ebdorado.fr" target="_blank">
                   <figure>
                     <img alt="Thumbnail " src="./static/images/projects/ebdorado.png">
@@ -238,7 +262,7 @@
                   </figure>
                 </a>
               </li>
-              <!--
+
               <li>
                 <a href="http://cubecraft.technoculture.club/" target="_blank">
                   <figure>
@@ -261,10 +285,9 @@
                   </figure>
                 </a>
               </li>
-              -->
+
             </ul>
           </div>
-          <!-- .end .wrap -->
         </section>
 
         <section>
@@ -272,7 +295,7 @@
             <h3></h3>
             <ul class="flexblock activity">
               <li>
-                <a href="http://modulo.tools" target="_blank">
+                <a href="http://modulo.io" target="_blank">
                   <div>
                     I founded <b>Modulo</b>, a SAAS tool to help facilitators in their work.
                   </div>
