--- a/index.html
+++ b/index.html
@@ -4,17 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CLEAN MARKUP = GOOD KARMA.
-      Hi source code lover,
-
-      you're a curious person and a fast learner ;)
-      Let's make something beautiful together. Contribute on Github:
-      https://github.com/webslides/webslides
-
-      Thanks,
-      @jlantunez.
-    -->
-
     <!-- SEO -->
     <title>Arthur Schmitt - @tart2000</title>
     <meta name="description" content="Making Makers Make">
@@ -89,7 +78,7 @@
         <section>
           <!--.wrap = container (width: 90%) -->
           <div class="wrap size-80">
-            <h1>Hi, I am a designer specialized in collaborative prototyping. I make tools to help others be more creative and find solutions to wicked problems, through engagement and empowerment. I like to tinker and experiment, but can also contribute to strategy. I give talks and workshops. I live in Lyon.</h1>
+            <h1>Hi, I am a designer specialized in collaborative prototyping. I make tools to help others be more creative and find solutions to wicked problems, through engagement and empowerment. I like to tinker and experiment, but can also contribute to strategy. <br>I like bikes and I live in Lyon.</h1>
           </div>
           <!-- .end .wrap -->
         </section>
@@ -298,6 +287,13 @@
                 <a href="http://modulo.io" target="_blank">
                   <div>
                     I founded <b>Modulo</b>, a SAAS tool to help facilitators in their work.
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.lespremieres.com/" target="_blank">
+                  <div>
+                    I'm a prototyping mentor at the incubator <b>Les Premières</b>.
                   </div>
                 </a>
               </li>
