--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
               <li>
                 <a href="http://makerslab.em-lyon.com/" target="_blank">
                   <div>
-                    I'm a tutor at <b>EMLyon Makerslab</b>.
+                    I've been a tutor at <b>EMLyon Makerslab</b>.
                   </div>
                 </a>
               </li>
