--- a/index.html
+++ b/index.html
@@ -143,6 +143,71 @@
             <h3></h3>
             <ul class="flexblock gallery">
 
+              <!-- Collages -->
+              <li>
+                <a href="https://portfolio.arthurschmitt.com/collages-2025" target="_blank">
+                  <figure>
+                    <img alt="" src="./static/images/projects/collages.png" loading="lazy">
+                    <div class="overlay aligncenter">
+                      <h2>Collages</h2>
+                      <p>Series of 100 collages</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <!-- Cardinal Turbo -->
+              <li>
+                <a href="" target="_blank">
+                  <figure>
+                    <img alt="Online card game Cardinal Turbo" src="./static/images/projects/cardinal_turbo.png" loading="lazy">
+                    <div class="overlay aligncenter">
+                      <h2>Cardinal Turbo</h2>
+                      <p>Online card game</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+              <!-- St Roustan Jersey -->
+              <li>
+                <a href="" target="_blank">
+                  <figure>
+                    <img alt="St Roustan Jersey - Roller hockey jersey design for the imaginary village of St Roustan" src="./static/images/projects/maillot_stroustan.png" loading="lazy">
+                    <div class="overlay aligncenter">
+                      <h2>St Roustan Jersey</h2>
+                      <p>Roller hockey jersey design for the imaginary village of St Roustan</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
+
+              <li>
+                <a href="https://solariboard.vercel.app" target="_blank">
+                  <figure>
+                    <img alt="Solariboard - System to send messages to an airport-like mesage board" src="./static/images/projects/solariboard.png" loading="lazy">
+                    <div class="overlay aligncenter">
+                      <h2>Solariboard</h2>
+                      <p>System to send messages to an airport-like mesage board</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+              
+              <!-- Maison du calembour -->
+              <li>
+                <a href="https://portfolio.arthurschmitt.com/maison-du-calembour" target="_blank">
+                  <figure>
+                    <img alt="Maison du calembour - Projet d'illustrations avec jeux de mots par Arthur Schmitt" src="./static/images/projects/portfolio.png" loading="lazy">
+                    <div class="overlay aligncenter">
+                      <h2>Maison du calembour</h2>
+                      <p>Illustrations with puns in them</p>
+                    </div>
+                  </figure>
+                </a>
+              </li>
+
               <li>
                 <a href="https://portfolio.arthurschmitt.com/maison-du-calembour" target="_blank">
                   <figure>
