--- a/index.html
+++ b/index.html
@@ -209,19 +209,7 @@
               </li>
 
               <li>
-                <a href="https://portfolio.arthurschmitt.com/maison-du-calembour" target="_blank">
-                  <figure>
-                    <img alt="Maison du calembour - Projet d'illustrations avec jeux de mots par Arthur Schmitt" src="./static/images/projects/portfolio.png" loading="lazy">
-                    <div class="overlay aligncenter">
-                      <h2>Maison du calembour</h2>
-                      <p>Illustrations with puns in them</p>
-                    </div>
-                  </figure>
-                </a>
-              </li>
-
-              <li>
-                <a href="https://bikefurious.bigcartel.com" target="_blank">
+                <a href="https://bikefurious.com" target="_blank">
                   <figure>
                     <img alt="Bikefurious - Tshirts about bicyles" src="./static/images/projects/bikefurious.png" loading="lazy">
                     <div class="overlay aligncenter">
